Attempting to stop wrapping on pre tag with long contents. Attempting!

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -384,6 +384,7 @@ pre
   background: #eeedea;
   border-radius: 3px;
   line-height: 1.4em;
+  word-wrap: break-word;
 }
 
 /* Sidebar stuff begin: */
